--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^8.5.1",
     "config": "^3.3.1",
     "express-validator": "^6.6.1",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "mongodb": "^3.6.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4",
